--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
           <tr>
             <td data-label="Time Reported">01:17 PM</td>
             <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
+            <td data-label="Street Name">WOODRAIL LN</td>
+            <td data-label="City">VAN</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies"></td>
           </tr>
