--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">FIRST ST W</td>
             <td data-label="City">WEST MADISON</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Madison VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
