--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">03:55 PM</td>
+            <td data-label="Time Reported">04:06 PM</td>
             <td data-label="Incident">Attempt to Serve</td>
-            <td data-label="Street Name">BEECHWOOD RD</td>
-            <td data-label="City">MANILA</td>
+            <td data-label="Street Name">STAR LN</td>
+            <td data-label="City">FOSTER</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
