--- a/index.html
+++ b/index.html
@@ -150,18 +150,9 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">04:16 PM</td>
-            <td data-label="Incident">Attempt to Serve</td>
-            <td data-label="Street Name">PERCHIE LN</td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
-          </tr>
-        
-          <tr>
             <td data-label="Time Reported">04:09 PM</td>
             <td data-label="Incident">Burglar Alarm - Audible</td>
-            <td data-label="Street Name">RIDGEVIEW NELLIS RD</td>
+            <td data-label="Street Name">RIDGEVIEW NELLIKS RD</td>
             <td data-label="City">RIDGEVIEW</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
