--- a/index.html
+++ b/index.html
@@ -150,10 +150,19 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:39 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">SENG CREEK</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:33 PM</td>
             <td data-label="Incident">Welfare Check</td>
             <td data-label="Street Name">JOSEPHINE AVE</td>
-            <td data-label="City">MADIOSN</td>
+            <td data-label="City">MADISON</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies"></td>
           </tr>
