--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">JOSEPHINE AVE</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
