--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <tr>
             <td data-label="Time Reported">04:39 PM</td>
             <td data-label="Incident">Sick</td>
-            <td data-label="Street Name">SENG CREEK</td>
+            <td data-label="Street Name">SENG CREEK RD</td>
             <td data-label="City">SYLVESTER</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Whitesville EMS</td>
@@ -162,15 +162,6 @@
             <td data-label="Time Reported">04:33 PM</td>
             <td data-label="Incident">Welfare Check</td>
             <td data-label="Street Name">JOSEPHINE AVE</td>
-            <td data-label="City">MADISON</td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office, Madison PD</td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">04:32 PM</td>
-            <td data-label="Incident">Domestic Violence</td>
-            <td data-label="Street Name">CUB LN</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office, Madison PD</td>
