--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:03 PM</td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
+            <td data-label="Street Name">CAMP CREEK RD</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:58 PM</td>
             <td data-label="Incident"></td>
             <td data-label="Street Name">SMOOT AVE</td>
