--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:36 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">FOSTERVILLE</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:22 PM</td>
             <td data-label="Incident">Arrest</td>
             <td data-label="Street Name">RIDGEVIEW MTN</td>
