--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">09:36 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Sick</td>
             <td data-label="Street Name">COAL RIVER RD</td>
-            <td data-label="City">FOSTERVILLE</td>
+            <td data-label="City">SETH</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
