--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:22 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">COMFORT VMART</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:14 AM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">MEADOW FORK RD</td>
