--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:33 AM</td>
+            <td data-label="Incident">Transport to KDU</td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:22 AM</td>
             <td data-label="Incident">Unknown Problem</td>
             <td data-label="Street Name">COMFORT VMART</td>
