--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <tr>
             <td data-label="Time Reported">06:22 AM</td>
             <td data-label="Incident">Unknown Problem</td>
-            <td data-label="Street Name">COMFORT VMART</td>
-            <td data-label="City"></td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">COMFORT</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
