--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:59 PM</td>
+            <td data-label="Incident">Arrest</td>
+            <td data-label="Street Name">COURT ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:02 PM</td>
             <td data-label="Incident">Scheduled Transport</td>
             <td data-label="Street Name">KENMORE DR</td>
