--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:55 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">ROBERT C BYRD FWY NB</td>
+            <td data-label="City">TURTLE CREEK</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:23 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">CHERRY LN</td>
