--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:17 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:51 PM</td>
             <td data-label="Incident">Pain</td>
             <td data-label="Street Name">COOPER ST</td>
