--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">03:17 PM</td>
-            <td data-label="Incident">Traffic Stop</td>
-            <td data-label="Street Name">COAL RIVER RD</td>
-            <td data-label="City">SYLVESTER</td>
+            <td data-label="Time Reported">03:22 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SYLVESTER ST</td>
+            <td data-label="City">TOWN OF SYLVESTER</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
