--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">03:22 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name">SYLVESTER ST</td>
+            <td data-label="Incident">Investigations</td>
+            <td data-label="Street Name">SYLVESTER RD</td>
             <td data-label="City">TOWN OF SYLVESTER</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
