--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">03:36 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:22 PM</td>
             <td data-label="Incident">Investigations</td>
             <td data-label="Street Name">SYLVESTER RD</td>
