--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
               
           <tr>
             <td data-label="Time Reported">03:36 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">NANCY DOLIN RD</td>
+            <td data-label="City">JULIAN</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies"></td>
           </tr>
