--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:30 PM</td>
+            <td data-label="Incident">Chest Pain</td>
+            <td data-label="Street Name">JOES CREEKS</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:15 PM</td>
             <td data-label="Incident">Injured Person</td>
             <td data-label="Street Name">SIX MILE RD</td>
