--- a/index.html
+++ b/index.html
@@ -151,18 +151,9 @@
               
           <tr>
             <td data-label="Time Reported">05:02 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">04:34 PM</td>
-            <td data-label="Incident">Call Complaintant</td>
-            <td data-label="Street Name">WOODRAIL LN</td>
-            <td data-label="City">VAN</td>
+            <td data-label="Incident">Threats</td>
+            <td data-label="Street Name">FAIR CHANCE RD</td>
+            <td data-label="City">LOW GAP</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
