--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:11 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">JULIAN RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:02 PM</td>
             <td data-label="Incident">Threats</td>
             <td data-label="Street Name">FAIR CHANCE RD</td>
