--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">05:38 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">LOW BRIDGE LN</td>
             <td data-label="City">SAND LICK</td>
             <td data-label="Cross Streets"></td>
