--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">06:21 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Search & Rescue</td>
             <td data-label="Street Name">BOLT MOUNTAIN</td>
             <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Wharton-Barrett VFD</td>
           </tr>
         
           <tr>
