--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:21 PM</td>
+            <td data-label="Incident">Theft</td>
+            <td data-label="Street Name">WHITE BUCK RD</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:51 PM</td>
             <td data-label="Incident">Call Through Office</td>
             <td data-label="Street Name">SIX MILE RD</td>
