--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:15 PM</td>
+            <td data-label="Incident">Investigations</td>
+            <td data-label="Street Name">SHORT CREEK RD</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:21 PM</td>
             <td data-label="Incident">Theft</td>
             <td data-label="Street Name">WHITE BUCK RD</td>
