--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:47 PM</td>
+            <td data-label="Incident">Arrest</td>
+            <td data-label="Street Name">RAILROAD AVE</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:38 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">LOW BRIDGE LN</td>
