--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:03 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">ELSTON LN</td>
+            <td data-label="City">COMFORT</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:19 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
