--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:45 AM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">LESAGE LN</td>
+            <td data-label="City">ASHFORD</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:19 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
