--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:39 AM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">NAVY LN</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:05 AM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">ALESHIRE FORK RD</td>
