--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:32 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">NORTH FORK RD</td>
+            <td data-label="City">NORTH FORK</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:36 AM</td>
             <td data-label="Incident">Scheduled Transport</td>
             <td data-label="Street Name">KENMORE DR</td>
