--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">PINEY LN</td>
             <td data-label="City">PRICE HILL</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Madison VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
