--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:53 AM</td>
+            <td data-label="Incident">Motorist Assist</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">SHAFFER RD (1.2 miles) and LICK CREEK RD (50.8 feet)</td>
+            <td data-label="Responding Agencies">Danville PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:45 AM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
