--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:01 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">DICKS CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">ARMCO RD (1.1 miles) and ROBERT C BYRD FWY NB (1.0 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:53 AM</td>
             <td data-label="Incident">Motorist Assist</td>
             <td data-label="Street Name">LICK CREEK RD</td>
