--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <td data-label="Street Name">ESKINS LN</td>
             <td data-label="City">BLOOMINGROSE</td>
             <td data-label="Cross Streets">TONEYS BRANCH RD (207.1 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Racine VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
