--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:09 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">FAIR CHANCE RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">SPRINGFIELD CIR (192.8 feet) and SPRINGFIELD CIR (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:05 PM</td>
             <td data-label="Incident">Attempt to Serve</td>
             <td data-label="Street Name">SMOOT AVE</td>
