--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:04 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">LAVENDER LN</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">HILL VALLEY DR (129.2 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:05 PM</td>
             <td data-label="Incident">Attempt to Serve</td>
             <td data-label="Street Name">SMOOT AVE</td>
