--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:30 PM</td>
+            <td data-label="Incident">Abandoned Vehicle</td>
+            <td data-label="Street Name">POND FORK RD</td>
+            <td data-label="City">BIM</td>
+            <td data-label="Cross Streets">GRAFTON LN (70.0 feet) and BRANDT ST (92.8 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:13 PM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name">MADISON AVE</td>
