--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:55 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">RUSTIC LN</td>
+            <td data-label="City">BLOOMINGROSE</td>
+            <td data-label="Cross Streets">COAL RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:37 PM</td>
             <td data-label="Incident">Chest Pain</td>
             <td data-label="Street Name">DUSK LN</td>
