--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:28 PM</td>
+            <td data-label="Incident">Fight</td>
+            <td data-label="Street Name">MADISON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">ORCHARD DR (0.1 miles) and HILL VIEW DR (0.1 miles)</td>
+            <td data-label="Responding Agencies">Madison PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:14 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">COAL RIVER RD</td>
