--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:49 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:14 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">COAL RIVER RD</td>
